<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondo_bienvenida"
    android:alpha="0.7">

    <TextView
        android:id="@+id/texto_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lithob"
        android:text="@string/bienvenido"
        android:textColor="@color/orange"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lithob"
        android:padding="20dp"
        android:text="@string/texto1"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/texto_bienvenida"
        app:layout_constraintVertical_bias="0.14" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/texto"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/spyro_logo_2018" />

    <TextView
        android:id="@+id/texto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lithob"
        android:padding="20dp"
        android:text="@string/texto2"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintVertical_bias="0.394" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/comenzar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lithob"
        android:text="@string/comenzar"
        app:icon="@drawable/skill_points"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texto2"
        app:layout_constraintVertical_bias="0.468" />

    <Button
        android:id="@+id/btn_omitir"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/omitir"
        android:textColor="@color/yellow2"
        app:layout_constraintTop_toBottomOf="@id/comenzar"
        app:layout_constraintStart_toStartOf="@id/comenzar"
        app:layout_constraintEnd_toEndOf="@id/comenzar"/>


</androidx.constraintlayout.widget.ConstraintLayout>